# mpf-website

./: LICENSE  _msft-clarity.html  _publish.yml  _quarto.yml  about.qmd  blog.qmd  contact.qmd  cv.qmd  galleries.qmd  index.qmd  new-post.ps1  publish.ps1  pyproject.toml  robots.txt  sitemap.json  sitemap.xml  subscribe.html
.github/: copilot-instructions.md  copilot-posts-instructions.md
.well-known/: microsoft-identity-association.json
_site/: about.html  index.html  search.json
galleries/: _msft-clarity.html  ccr-2025-03-25.qmd  ccr-2025-04-03.qmd  ccr-2025-04-11.qmd  ccr-2025-04-17.qmd  ccr-2025-04-18.qmd  ccr-2025-04-19.qmd  ccr-2025-04-24.qmd  ccr-2025-04-25.qmd  ccr-2025-04-27.qmd  ccr-2025-05-04.qmd  cross-creek-polishing-pond-2025-06-06.qmd  cross-creek-polishing-pond-2025-06-10.qmd  cross-creek-ranch-polishing-pond-2025-05-12.qmd  fulshear-2025-03-25.qmd  fulshear-2025-04-03.qmd  fulshear-2025-04-11.qmd  fulshear-2025-04-17.qmd  fulshear-2025-04-18.qmd  fulshear-2025-04-19.qmd  fulshear-2025-04-24.qmd  fulshear-2025-04-25.qmd  fulshear-2025-04-27.qmd  fulshear-2025-05-04.qmd  jordan-legacies-dance-2025-04-26.qmd  seattle-locks-2025-05-25.qmd  sparrow-backyard-2025-05-08.qmd  swallow-backyard-2025-05-08.qmd
mpf_website.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
posts/: 2021-10-05-optimization-algorithms-for-your-career.qmd  2022-06-21-becoming-good-ai-for-good.qmd  2024-01-04-adhd.qmd  2024-01-19-adhd-treatment.qmd  2024-01-25-science-books.qmd  2024-02-01-openai-concurrency.qmd  2024-02-02-adhd-coping-technologies.qmd  2024-02-13-vultures.qmd  (+12 more)
(+9 files in other folders)
